--- a/homework/Day001_read_image_HW.ipynb
+++ b/homework/Day001_read_image_HW.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "\n",
@@ -34,7 +42,7 @@
     "\n",
     "# 以Channel圖片的方式載入\n",
     "img = cv2.imread(img_path, cv2.IMREAD_COLOR)\n",
-    "type(img)\n",
+    "print(type(img))\n",
     "\n",
     "# 注意順序是BGR不是RGB\n",
     "(B, G, R) = cv2.split(img)\n",
