--- a/homework/Day003_color_spave_op_Sample.ipynb
+++ b/homework/Day003_color_spave_op_Sample.ipynb
@@ -38,6 +38,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 Python 的 list  或是矩陣裏面 -1 代表「最後一個」\n",
+    "\n",
+    "在這邊我們知道 img_hls_down 是一個三維矩陣\n",
+    "\n",
+    "前面兩個維度代表長跟寬，第3個維度在這邊分別是 H, L, S channel\n",
+    "\n",
+    "\n",
+    "\n",
+    "所以 img_hls_down[..., -1] 這邊應該要看兩件事情\n",
+    "\n",
+    "[..., -1] 代表我們 -1 指的是「最後一個維度」的「最後一個 channel」\n",
+    "\n",
+    "img_hls_down[..., -1] 代表我們希望拿這個矩陣的 S channel (飽和度)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
